--- a/css/delivery.css
+++ b/css/delivery.css
@@ -1,6 +1,11 @@
 .centerT{
 	text-align: center;
 	list-style-position:inside;
+	color:white;
+}
+
+button:hover {
+    background-color: red;
 }
 
 table{
